--- a/views/user/searchres.ejs
+++ b/views/user/searchres.ejs
@@ -4,14 +4,14 @@
 	<title>userlist</title>
 </head>
 <body>
-	<h1>User List</h1>
-	<input type="text" name="searchBox">
-	<br>
-	<a href="/home">Back</a> |
+	<h1>Details </h1>
+
+	<a href="/user/userlist">Back</a> |
 	<a href="/logout">logout</a>
 
 <br><br>
-	<table border="1">
+
+<table border="1">
 		<tr>
 			<td>ID</td>
 			<td>Employe Name</td>
